# pg_prometheus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Makefile  README.md  bootstrap  bootstrap.bat  pg_prometheus.control  pg_prometheus.control.in  version.config
sql/: CMakeLists.txt  prometheus.sql
src/: .dir-locals.el  CMakeLists.txt  build-defs.cmake  config.h.in  parse.c  parse.h  prom.c  prom.h  utils.c  utils.h
test/: CMakeLists.txt  test-defs.cmake
test/expected/: construct.out  normalized.out  raw.out
test/sql/: CMakeLists.txt  construct.sql  normalized.sql  raw.sql
test/src/: CMakeLists.txt  test_utils.h
test/src/bgw/: README.md
test/src/loader/: CMakeLists.txt  init.c
test/src/net/: conn_mock.h
test/src/telemetry/: test_privacy.c
